--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+halpid (4.0.2) UNRELEASED; urgency=medium
+
+  * Fix the state enums. New release to also bump the Debian package version
+    number.
+
+ -- Matti Airas <matti.airas@hatlabs.fi>  Thu, 07 Aug 2025 10:12:23 +0000
+
 halpid (4.0.0) unstable; urgency=medium
 
   * Refactor the command line interface
