--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+halpid (4.0.5) stable; urgency=medium
+
+  * Automated release 4.0.5. See GitHub for details.
+
+ -- Hat Labs CI <info@hatlabs.fi>  Sun, 19 Oct 2025 15:50:46 +0000
+
 halpid (4.0.4~a1) stable; urgency=medium
 
   [ Matti Airas ]
