--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+halpid (4.0.6) stable; urgency=medium
+
+  * Automated release 4.0.6. See GitHub for details.
+
+ -- Hat Labs CI <info@hatlabs.fi>  Mon, 20 Oct 2025 11:46:22 +0000
+
 halpid (4.0.5) stable; urgency=medium
 
   * Automated release 4.0.5. See GitHub for details.
