--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,24 @@ halpid (4.0.7) stable; urgency=medium
 
   * Automated release 4.0.7. See GitHub for details.
 
+ -- Hat Labs CI <info@hatlabs.fi>  Mon, 20 Oct 2025 13:56:58 +0000
+
+halpid (4.0.7) stable; urgency=medium
+
+  * Automated release 4.0.7. See GitHub for details.
+
+ -- Hat Labs CI <info@hatlabs.fi>  Mon, 20 Oct 2025 13:51:31 +0000
+
+halpid (4.0.7) stable; urgency=medium
+
+  * Automated release 4.0.7. See GitHub for details.
+
+ -- Hat Labs CI <info@hatlabs.fi>  Mon, 20 Oct 2025 13:49:59 +0000
+
+halpid (4.0.7) stable; urgency=medium
+
+  * Automated release 4.0.7. See GitHub for details.
+
  -- Hat Labs CI <info@hatlabs.fi>  Mon, 20 Oct 2025 13:39:52 +0000
 
 halpid (4.0.6) stable; urgency=medium
